--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import "./styles/commonClasses.css";
+@import "./styles/variable.css";
+/* Components\styles\commonClasses.css */
+
+/* this will apply my each and every element of my website */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
